# gen3-vivado-top

./: .gitignore  .gitmodules  1clock.tcl  2clock.tcl  DESIGN.md  Makefile  README.md  base-mts.xdc  base.xdc  constraints.xdc  create_iqgen_ofilt_debug.tcl  create_project.tcl  create_top_level_prj.tcl  create_vivado_2021_2_prj.tcl  create_vivado_2022_1_prj.tcl  create_vivado_2022_2_ilas_prj.tcl  create_vivado_2022_2_prj.tcl  ddr4.xdc  gen3_512_phasematch.tcl  phasematch_4interconnect_utilization.xlsx  phasematch_8interconnect_utilization.xlsx  write_prj.tcl
bd/: 4x2_fresh_build.tcl  Bin2Res2020.tcl  capplay_jc.tcl  capplay_jc1fix.tcl  capplay_jc2.tcl  capture_play.tcl  capturetest.tcl  channelizer_multrate.tcl  ddc_bram_ilas.tcl  ddc_bram_ilas_stripped.tcl  ddc_bram_start.tcl  full_design_trigger_ref.tcl  gen3.tcl  gen3_512.tcl  gen3_512_1cap_4tap.tcl  gen3_512_4tap.tcl  gen3_512_iqsweep.tcl  gen3_512_jbhand.tcl  gen3_512_phasematch.tcl  gen3_opfb.tcl  gen3_top.tcl  gen3_top_mts.tcl  gen3_top_mts_photonok.tcl  gen3_top_mts_photonok_23_2.tcl  gen3dev.tcl  gen3dev512_notready.tcl  iqgen_round_test.tcl  iqtest.tcl  iqtest_2adcdac.tcl  jenny_pynq_mts.tcl  ofilt_iqgen_test.tcl  ofilt_iqgen_test_subset_slice.tcl  opfb_chan_cap_2021.1.tcl  opfb_chan_cap_2021.1_top.tcl  opfb_chan_cap_2021.1_top_2clk.tcl  opfb_chan_cap_4.20.21.tcl  opfb_chan_cap_nomig_4.20.21.tcl  opfb_chan_cap_nomig_4.22.21.tcl  opfb_w_adc2opfb1_1.tcl  (+24 more)
rtl/mkidaranth/: README.md  pyproject.toml
rtl/mkidaranth/src/mkidaranth/: trigger.py  trigger_peripheral.py
rtl/mkidaranth/tests/: test_trigger.py
(+123 files in other folders)
